Changed scripts icon

--- a/editor/sass/fonts.scss
+++ b/editor/sass/fonts.scss
@@ -5,10 +5,13 @@
          url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.woff2') format('woff2'),
          url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.woff') format('woff'),
          url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.ttf') format('truetype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.svg#pc') format('svg');
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.svg#playicons8regular') format('svg');
+
     font-weight: normal;
     font-style: normal;
 }
+
+
 
 
 @font-face {
