assets context menu

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -878,10 +878,10 @@ a:visited {
         > .icon {
             display: inline-block;
             width: 14px;
-            height: 14px;
-            line-height: 14px;
+            height: 32px;
+            line-height: 32px;
             text-align: center;
-            margin: 8px 0 8px 8px;
+            margin: 0 0 0 8px;
             vertical-align: top;
             background-color: #07f;
         }
