--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1504,6 +1504,21 @@ strong {
                     text-align: center;
                 }
             }
+            > .ui-button.calculate-meta {
+                display: block;
+                text-align: center;
+
+                &.hidden {
+                    display: none;
+                }
+                &:before {
+                    content: '\E131';
+                    padding-right: 8px;
+                    @extend .font-icon;
+                    font-size: 16px;
+                    text-align: center;
+                }
+            }
             > .ui-button.override-material, .ui-button.loading-screen {
                 flex-grow: 1;
                 background-color: $bcg-dark;
