--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3955,9 +3955,10 @@ strong {
                 padding: 5px 10px;
 
                 .ui-button {
-                    float: right;
-                    font-size: 11px;
-                    line-height: 22px;
+                    @extend .font-icon;
+                    font-size: 14px;
+                    line-height: 24px;
+                    height: 22px;
                 }
             }
         }
