Added scrolling to curve picker by holding the RMB

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3976,6 +3976,11 @@ strong {
                     height: 22px;
                 }
             }
+
+            &.scroll {
+                cursor: -webkit-grabbing;
+                cursor: -moz-grabbing;
+            }
         }
     }
 }
