vec2, vec3, vec4 script attributes; fix floating long names in lists; add screen blending

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -385,7 +385,7 @@ a:visited {
     padding: 0;
     margin: 4px;
     font-size: 11px;
-    // font-family: 'Lucida Grande';
+    overflow: hidden;
     border: 1px solid #1a1a1a;
     transition: opacity 100ms;
 
