Fix hidden inputs in IE11

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -945,6 +945,7 @@ a:visited {
     > input.field {
         @extend .fieldFont;
         width: calc(100% - 16px);
+        height: 100%;
         padding: 0 8px;
         line-height: 22px;
         color: #fff;
@@ -1032,6 +1033,7 @@ a:visited {
     }
     > input.field {
         @extend .fieldFont;
+        height: 100%;
         width: calc(100% - 16px);
         padding: 0 8px;
         line-height: 22px;
