--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -386,6 +386,7 @@ a:visited {
     margin: 4px;
     font-size: 11px;
     overflow: hidden;
+    min-height: 22px;
     border: 1px solid #1a1a1a;
     transition: opacity 100ms;
 
