--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -911,7 +911,7 @@ a:visited {
     border: none;
     border: 1px solid $bcg-darker;
     background-color: $bcg-dark;
-    border-radius: 12px;
+    // border-radius: 12px;
     width: 28px;
     height: 14px;
     margin: $field-padding;
