fix particles randomize toggle

--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -967,6 +967,9 @@ a:visited {
             }
         }
     }
+    &.component-toggle {
+        border-radius: 8px;
+    }
 }
 
 .ui-select-field {
