script urls > window.open

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1652,10 +1652,16 @@ strong {
                 > .title {
                     max-width: calc(100% - 128px);
 
-                    > a {
+                    > .link {
                         overflow: hidden;
                         text-overflow: ellipsis;
                         display: block;
+                        color: $text-active;
+                        cursor: pointer;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
                 > .move-down, > .move-up, > .refresh, > .remove {
