--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -758,10 +758,12 @@ strong {
                 }
                 > .ui-button.generate-uv1 {
                     margin: 0;
-                    line-height: 26px;
+                    height: 22px;
+                    line-height: 22px;
                     font-size: 12px;
                     text-transform: uppercase;
                     margin-right: 3px;
+                    margin-top: 2px;
                 }
             }
         }
