fix whoisonline & assets widget when viewport expanded

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2473,6 +2473,9 @@ strong {
     background-color: transparent;
     padding: 2px;
 
+    &.expanded {
+        bottom: 2px;
+    }
     > .content {
         > a {
             display: block;
