--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -95,6 +95,16 @@ strong {
                         background-color: mix($bcg-dark, $bcg-darkest, 50%);
                     }
                 }
+                &.light-mapper.active {
+                    background-color: #364346;
+                    color: $text-active;
+
+                    &:hover,
+                    &:focus {
+                        color: $text-primary;
+                        background-color: $bcg-dark;
+                    }
+                }
                 &.disabled {
                     opacity: 1;
                     color: mix(#9ba1a3, #364346, 30%);
@@ -676,6 +686,37 @@ strong {
                     font-size: 20px;
                     text-align: center;
                     background-color: $bcg-primary;
+                }
+            }
+        }
+    }
+    &.light-mapper {
+        > .inner {
+            > .header {
+                display: block;
+            }
+            > .uv1 {
+                color: $text-secondary;
+                max-width: 200px;
+                white-space: normal;
+                line-height: normal;
+                padding: 2px 0 8px;
+
+                &.hidden {
+                    display: none;
+                }
+                > .ui-button {
+                    margin: 0;
+                    padding: 0;
+                    line-height: normal;
+                    border: none;
+                    color: $text-active;
+                    background-color: transparent;
+
+                    &:hover {
+                        text-decoration: underline;
+                        color: $text-primary;
+                    }
                 }
             }
         }
