Fix max width of project name

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4569,6 +4569,10 @@ strong {
                             .name {
                                 font-size: 14px;
                                 color: $text-primary;
+                                max-width: 100%;
+                                overflow: hidden;
+                                white-space: nowrap;
+                                text-overflow: ellipsis;
                             }
                         }
 
