Swap publish and feedback buttons

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -153,7 +153,7 @@ strong {
                 background-color: $bcg-darker;
             }
 
-            &.publish {
+            &.contact {
                 position: absolute;
                 left: 0;
                 bottom: 45px;
