--- a/editor/sass/fonts.scss
+++ b/editor/sass/fonts.scss
@@ -58,11 +58,15 @@
     font-style: normal;
 }
 
-.font-icon {
-    font-family: 'pc-icon';
+.font-smooth {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-smoothing: antialiased;
+}
+
+.font-icon {
+    font-family: 'pc-icon';
+    @extend .font-smooth;
 }
 
 .font-thin {
